# DDE_solve

./: README.md  pyproject.toml
DDE_solver/: DDE_solver.py  THIS_ONE_WORKS.py  dde_one_delay.py  dde_system_2.py  dde_test.sh  disc_finder.py  expression_for_RK4HHL.py  main_integrator.py  ndde_test.sh  rkh.py  rkh_LATEST.py  rkh_fast_ov_test_disc.py  rkh_multiple_delays.py  rkh_overlapping.py  rkh_refactor.py  rkh_state_complete.py  rkh_vectorize.py  safety_program.py  save_copy.py  simplified_Newton.py  test_disc_finder.py  wtfiswrong.py
DDE_solver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
DDE_solver/DDETST/: DDETST_A2.py  DDETST_All_Problems_statistics.py  DDETST_B1.py  DDETST_B2.py  DDETST_C1.py  DDETST_C2.py  DDETST_C3.py  DDETST_C4.py  DDETST_D1.py  DDETST_D2.py  DDETST_E1.py  julia_prob_dde_DDETST_H1.py
DDE_solver/examples/: confimation_test.py  exRADAR_sol_term.py  ex_1_1_14.py  ex_1_1_1_zennaro.py  ex_1_1_2_zennaro.py  ex_1_1_6.py  ex_1_1_6_multiple_delays.py  ex_1_1_9.py  ex_1_2_6.py  ex_1_2_7.py  ex_1_3_1.py  ex_1_3_12.py  ex_1_3_2.py  ex_1_3_4.py  ex_1_3_4_ov.py  ex_1_3_9.py  ex_1_4_1.py  ex_1_4_1_system.py  ex_1_4_4.py  ex_2_3_1.py  ex_7_3_1_zennaro.py  ex_7_4_1_zennaro.py  ex_7_4_2_zennaro.py  run_all.sh
DDE_solver/old/: rkh_LATEST.py  rkh_ovl_simp_newton.py  rkh_refactor_to_fix_dimensions.py  rkh_refactor_working.py  rkh_state_complete.py  rkh_vectorize.py
DDE_solver/show_problems/: NDDE_fucked.py
DDE_solver/testDDE/: exRADAR_sol_term.py  ex_1_1_1_zennaro.py  ex_1_1_2_zennaro.py  ex_1_1_6_multiple_delays.py  maybe.py  (+3 more)
tests/: testing.py
(+47 files in other folders)
